--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		".": "./index.js",
 		"./*": "./*.js"
 	},
-	"license": "UNLICENSED",
-	"private": true,
+
+	"license": "MIT",
 	"type": "module",
 	"scripts": {
 		"eslint": "eslint --fix ./"
