removed chat functionality from @tokenring-ai/ai-client, and moved it into @tokenring-ai/chat. Updated dependencies to latest versions

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
  "description": "TokenRing Coder Git Intregration",
  "version": "0.1.0",
  "dependencies": {
-  "@tokenring-ai/ai-client": "0.1.0",
+  "@tokenring-ai/chat": "0.1.0",
   "@tokenring-ai/agent": "0.1.0",
   "@tokenring-ai/filesystem": "0.1.0",
   "@tokenring-ai/testing": "0.1.0",
