--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
  "name": "@tokenring-ai/git",
  "description": "TokenRing Coder Git Intregration",
- "version": "0.1.0",
+ "version": "0.2.0",
  "dependencies": {
-  "@tokenring-ai/chat": "0.1.0",
-  "@tokenring-ai/agent": "0.1.0",
-  "@tokenring-ai/filesystem": "0.1.0",
-  "@tokenring-ai/testing": "0.1.0",
-  "@tokenring-ai/utility": "0.1.0",
-  "execa": "^9.6.0"
+  "@tokenring-ai/ai-client": "0.2.0",
+  "@tokenring-ai/app": "0.2.0",
+  "@tokenring-ai/chat": "0.2.0",
+  "@tokenring-ai/agent": "0.2.0",
+  "@tokenring-ai/filesystem": "0.2.0",
+  "@tokenring-ai/testing": "0.2.0",
+  "@tokenring-ai/utility": "0.2.0",
+  "execa": "^9.6.0",
+  "zod": "^4.1.13"
  },
  "exports": {
   ".": "./index.ts",
