--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@tokenring-ai/testing": "0.2.0",
     "@tokenring-ai/utility": "0.2.0",
     "execa": "^9.6.1",
-    "zod": "^4.1.13"
+    "zod": "catalog:"
   },
   "exports": {
     ".": "./index.ts",
