Add vitest and typescript as devDependencies; define test and build scripts in package.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "eslint": "eslint --fix ./"
+    "eslint": "eslint --fix ./",
+    "test": "vitest run",
+    "build": "tsc --noEmit",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
+  },
+  "devDependencies": {
+    "vitest": "catalog:",
+    "typescript": "catalog:"
   }
 }
