--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@tokenring-ai/testing": "0.2.0",
     "@tokenring-ai/utility": "0.2.0",
     "execa": "^9.6.1",
-    "zod": "catalog:"
+    "zod": "^4.3.6"
   },
   "exports": {
     ".": "./index.ts",
@@ -27,7 +27,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "vitest": "catalog:",
-    "typescript": "catalog:"
+    "vitest": "^4.0.18",
+    "typescript": "^5.9.3"
   }
 }
