--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tokenring-ai/filesystem": "0.2.0",
     "@tokenring-ai/testing": "0.2.0",
     "@tokenring-ai/utility": "0.2.0",
+    "@tokenring-ai/terminal": "0.2.0",
     "execa": "^9.6.1",
     "zod": "^4.3.6"
   },
